# Caxton-Mirrored

./: .gitignore  NOTES.md  README.md  build.gradle  gradle.properties  settings.gradle  updateHeader
caxton-impl/: Cargo.toml  Cross.toml  build.gradle  xyz_flirora_caxton_dll_CaxtonInternal.h  xyz_flirora_caxton_font_CaxtonInternal.h
caxton-impl/docker/: Dockerfile.x86_64-pc-windows-gnu  Dockerfile.x86_64-unknown-linux-gnu
caxton-impl/msdf-rs/msdf/: Cargo.toml
caxton-impl/msdf-rs/msdf-sys/: Cargo.toml  build.rs
caxton-impl/msdf-rs/msdf/src/: lib.rs  loader.rs
caxton-impl/src/: atlas.rs  cfont.rs  font.rs  jni.rs  lib.rs  shape.rs
src/main/java/: overview.html
src/main/java/xyz/flirora/caxton/: CaxtonEarlyRiser.java  CaxtonMod.java  CaxtonModClient.java  package-info.java
src/main/java/xyz/flirora/caxton/client/: CaxtonModClient.java
src/main/java/xyz/flirora/caxton/dll/: CaxtonInternal.java  LibraryLoading.java  RustPlatform.java  UnsupportedPlatformException.java
src/main/java/xyz/flirora/caxton/font/: CaxtonAtlasTexture.java  CaxtonFont.java  CaxtonFontLoader.java  CaxtonFontOptions.java  CaxtonFontStorage.java  CaxtonGlyphPair.java  CaxtonGlyphResult.java  CaxtonInternal.java  CaxtonText.java  CaxtonTextRenderLayers.java  CaxtonTextRenderer.java  CaxtonTypeface.java  ConfiguredCaxtonFont.java  DirectionSetting.java  DirectionalCharacterVisitor.java  HasCaxtonTextRenderer.java  LayoutCache.java  Run.java  RunGroup.java  ShapedString.java  ShapingResult.java  package-info.java
src/main/java/xyz/flirora/caxton/layout/: CaxtonText.java  CaxtonTextHandler.java  DirectionSetting.java  DirectionalCharacterVisitor.java  FcIndexConverter.java  ForwardTraversedMap.java  LayoutCache.java  LineWrapper.java  Run.java  RunGroup.java  ShapedString.java  ShapingResult.java  (+3 more)
src/main/resources/: caxton.accesswidener  caxton.mixins.json  fabric.mod.json
src/main/resources/assets/caxton/lang/: en_us.json
src/main/resources/assets/minecraft/font/: default.json
src/main/resources/resourcepacks/inter/: pack.mcmeta
src/main/resources/resourcepacks/opensans/: pack.mcmeta
swig/: CMakeLists.txt  bindings.i
(+58 files in other folders)
