[package]
name = "caxton-impl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
base64 = "0.13.1"
image = "0.24.4"
io_ext = "0.2.0"
jni = "0.20.0"
mint = "0.5.9"
# Stupid workaround until msdf-rs updates its ttf-parser dependency
msdf = { path = "msdf-rs/msdf" }
rustybuzz = { git = "https://github.com/bluebear94/rustybuzz" }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
sha2 = "0.10.6"
thiserror = "1.0.37"
ttf-parser = "0.17.1"

[lib]
crate_type = ["cdylib"]
